--- a/index.html
+++ b/index.html
@@ -13,10 +13,26 @@
         <title>Saccol Lanches Bar e Pizzaria - (55) 3222-0314 | 3027-1046</title>
 
         <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
-        <link href="css/saccol.css" type="text/css" rel="stylesheet" />
-
-        <script src="js/jquery-1.12.3.min.js" type="text/javascript" ></script>
-        <script src="js/bootstrap.min.js" type="text/javascript" ></script>
+        <style>
+        .name {
+    text-align: center;
+    font-size: 2em;
+    font-family: "bevan";
+    text-shadow: 2px 2px #000000;
+    letter-spacing: 2px;
+    word-spacing: 0.5em;
+}
+.telefone {
+    text-shadow: 2px 2px #000000;
+}
+.pizza {
+    background-color: rgb(255,220,104);
+    background-image: url('../images/yellow-paper-texture-min.jpg');
+    background-position: center;
+    color: #000000;
+    padding: 2em;
+}
+        </style>
     </head>
     
     <body>
@@ -249,6 +265,9 @@
                     <em>Esse site foi desenvolvido com <a href="https://getbootstrap.com/">Bootstrap</a> por <a href="https://github.com/rsip22" property="cc:attributionName" rel="cc:attributionURL">Renata D'Avila</a> e possui uma Licença <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Atribuição-NãoComercial 4.0 Internacional</a>.</em>
                 </div>
             </div>                    
-        </footer>        
+        </footer>
+        <script src="js/jquery-1.12.3.min.js" type="text/javascript" ></script>
+        <script src="js/bootstrap.min.js" type="text/javascript" ></script>
+        <link href="css/saccol.css" type="text/css" rel="stylesheet" />        
     </body>
 </html>
