oops forgot Font Awesome stylesheet

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <title>Saccol Lanches Bar e Pizzaria - (55) 3222-0314 | 3027-1046</title>
 
         <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+        <link href="css/font-awesome/css/font-awesome.min.css" type="text/css" rel="stylesheet" />
         <link href="css/saccol.css" type="text/css" rel="stylesheet" />
     </head>
     
