--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-10 col-md-push-1 menu-list col-sm-10 col-sm-push-1 col-xs-12">
-                        <ul class="nav nav-tabs nav-justified" data-tabs="tabs">
+                    <div class="col-lg-10 col-lg-push-1 menu-list col-sm-10 col-sm-push-1 col-xs-12">
+                        <ul class="nav nav-tabs nav-justified" role="navigation" data-tabs="tabs">
                             <li class="active"><a data-toggle="tab" href="#cachorro">Cachorrão</a></li>
                             <li><a data-toggle="tab" href="#torrada">Torradas</a></li>
                             <li><a data-toggle="tab" href="#xis">Xis</a></li>
