melhorando tabs e rodapé

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-10 col-lg-push-1 menu-list col-sm-10 col-sm-push-1 col-xs-12">
-                        <ul class="nav nav-tabs nav-justified" role="navigation" data-tabs="tabs">
+                        <ul class="nav nav-tabs" role="navigation" data-tabs="tabs">
                             <li class="active"><a data-toggle="tab" href="#cachorro">Cachorrão</a></li>
                             <li><a data-toggle="tab" href="#torrada">Torradas</a></li>
                             <li><a data-toggle="tab" href="#xis">Xis</a></li>
