--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <body>
         <div class="jumbotron">
             <div class="container">
-                <div class="name">
+                <div class="name drop-shadow">
                     <h1>Saccol Lanches</h1>
                     <p>Bar e pizzaria</p>
                 </div>
-                <p class="telefone text-center">(55) 3222-0314 <br> (55) 3027-1046</p>
+                <p class="telefone drop-shadow text-center">(55) 3222-0314 <br> (55) 3027-1046</p>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
 
         <main>
             <div class="col-lg-12">
-                <h1 id="cardapio" class= "text-center">Cardápio <i class="fa fa-map-o"></i></h1>
+                <h1 id="cardapio" class= "text-center drop-shadow">Cardápio <i class="fa fa-map-o"></i></h1>
             </div>
 
             <div class="container-fluid">
@@ -199,10 +199,10 @@
                 </div>
             </div>            
 
-            <div class="text-center horario">
+            <div class="text-center">
                 <div class="container">
-                    <h2 class="col-lg-12" id="horarios">Horário de atendimento: <i class="fa fa-clock-o"></i> </h2>
-                    <p class="lead"> Segunda a domingo<br>
+                    <h1 class="col-lg-12 drop-shadow" id="horarios">Horário de atendimento: <i class="fa fa-clock-o"></i> </h1>
+                    <p class="lead black-to-white"> Segunda a domingo<br>
                         11 horas à meia-noite<br><br>
                       
                         Almoço<br>
