--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="text-center">
                 <div class="container">
                     <h1 class="col-lg-12 drop-shadow" id="horarios">Horário de atendimento: <i class="fa fa-clock-o"></i> </h1>
-                    <p class="lead black-to-white"> Segunda a domingo<br>
+                    <p class="lead"> Segunda a domingo<br>
                         11 horas à meia-noite<br><br>
                       
                         Almoço<br>
