--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <div class="pizza lead"> 
+        <div class="pizza yellow-img-bg lead"> 
             <h1>Venha comer, beber e passar ótimos momentos no Saccol!</h1>
             <p>Servimos lanches, refeições e bebidas em um ambiente alegre e descontraído. Venha curtir uma cerveja bem gelada e assistir aquela partida de futebol do Premiere ou passe aqui para almoçar com os amigos. Temos também viandas (de segunda à sexta) e tele-entrega dos seus lanches e pizzas favoritos. <a href="#tele">Ligue para nós e peça agora!</a></p>
         </div>        
@@ -222,7 +222,7 @@
                 </div>
             </div>            
 
-            <div class="container-fluid lanches">
+            <div class="container-fluid lanches yellow-img-bg">
                 <div class="row">
                     <h1 class="col-lg-12 col-md-12 col-sm-12 text-center" id="localizacao">Localização <i class="fa fa-map-marker"></i></h1><br>
                     <address class="col-lg-12 text-center"> 
