--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 
         <title>Saccol Lanches Bar e Pizzaria - (55) 3222-0314 | 3027-1046</title>
 
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:image" content="https://www.saccollanches.com.br/images/saccol_lanches.jpg">
+        <meta name="twitter:title" content="Saccol Lanches - Bar e pizzaria">
+        <meta name="twitter:description" content="Saccol Lanches, bar e pizzaria em Santa Maria, RS">
+
+        <!-- Open Graph -->
+        <meta property="og:locale" content="pt_BR">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Saccol Lanches">
+        <meta property="og:description" content="Saccol Lanches, bar e pizzaria em Santa Maria, RS">
+        <meta property="og:url" content="https://www.saccollanches.com.br">
+        <meta property="og:image" content="https://www.saccollanches.com.br/images/cerveja.jpg">
+
         <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
         <link href="css/font-awesome/css/font-awesome.min.css" type="text/css" rel="stylesheet" />
         <link href="css/saccol.css" type="text/css" rel="stylesheet" />
