--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="pizza lead"> 
             <h1>Venha comer, beber e passar ótimos momentos no Saccol!</h1>
-            <p>Servimos lanches, refeições e bebidas em um ambiente alegre e descontraído. Venha curtir uma cerveja bem gelada e assistir aquela partida de futebol do Premiere ou passe aqui para almoçar com os amigos. Temos também viandas (de segunda à sexta) e tele-entrega dos seus lanches e pizzas favoritos. <a href="#tele">Ligue para nós e peça agora!</a></p>
+            <p>Servimos lanches, refeições e bebidas em um ambiente alegre e descontraído. Venha beber uma cerveja bem gelada e assistir aquela partida de futebol do Premiere ou passe aqui para almoçar com os amigos. Nos fins de semana e vésperas de feriados, venha curtir nossa música ao vivo. Temos viandas (de segunda à sexta) e tele-entrega dos seus lanches e pizzas favoritos. <a href="#tele">Ligue para nós e peça agora!</a></p>
         </div>        
 
         <nav class="text-center">
@@ -192,7 +192,7 @@
                 <div class="col-md-10 col-md-push-1 menu-list col-sm-10 col-sm-push-1 col-xs-12 container teleentrega">
                     <div class="lead">
                         <h1 id="teleentrega">Tele-entrega <i class="fa fa-motorcycle"></i></h1>
-                        <p>Entregamos em toda região Centro de Santa Maria.<br> Valor da tele: R$ 7,00.</p>
+                        <p>Entregamos em toda região Centro de Santa Maria.<br> Verifique o valor de acordo com sua localização.</p>
                         <p>Telefone:<br>
                         <i class="fa fa-phone fa-2x" aria-hidden="true"></i> (55) 3222-0314 <br> (55) 3027-1046</p>
                     </div>
@@ -204,6 +204,8 @@
                     <h2 class="col-lg-12" id="horarios">Horário de atendimento: <i class="fa fa-clock-o"></i> </h2>
                     <p class="lead"> Segunda a domingo<br>
                         11 horas à meia-noite<br><br>
+                        Fins de semana e vésperas de feriados (dias com música ao vivo):<br>
+                        11 horas a 1 da manhã<br><br>
                       
                         Almoço<br>
                         11:00 às 14:00
