Corrige quebra do layout mobile no acréscimo do ovo.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     <li class="list-group-item">Cachorro presunto/queijo/bacon<span class="price">R$ 16,00</span><br>(Pão, presunto, queijo, bacon, alface, milho, tomate, condimentos)</li>
                                     <li class="list-group-item">Cachorro galinha/bacon<span class="price">R$ 16,00</span><br>(Pão, galinha, bacon, alface, milho, tomate, condimentos)</li>
                                     <li class="list-group-item">Cachorro mignon<span class="price">R$ 20,00</span><br>(Pão, filé mignon, alface, milho, tomate, condimentos)</li>
-                                    <li class="list-group-item"><strong>Acrescente ovo ao seu cachorro!</strong><span class="price">+ R$ 1,00</span><br></li>
+                                    <li class="list-group-item"><strong>Acrescente ovo!</strong><span class="price">+ R$ 1,00</span><br></li>
                                 </ul>
                             </div>
 
@@ -98,7 +98,7 @@
                                     <li class="list-group-item">Torrada coração<span class="price">R$ 11,00</span><br>(Pão, coração, queijo, presunto, alface,  milho, tomate)</li>
                                     <li class="list-group-item">Torrada bife<span class="price">R$ 11,00</span><br>(Pão, bife, queijo, presunto, alface,  milho, tomate)</li>
                                     <li class="list-group-item">Torrada mignon<span class="price">R$ 20,00</span><br>(Pão, filé mignon, queijo, presunto, alface, milho, tomate)</li>
-                                    <li class="list-group-item"><strong>Acrescente ovo a sua torrada!</strong><span class="price">+ R$ 1,00</span><br></li>
+                                    <li class="list-group-item"><strong>Acrescente ovo!</strong><span class="price"> +R$ 1,00</span><br></li>
                                 </ul>
                             </div>
 
